--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="me-auto">Campo Minato</h1>
             </div>
             <div class="col-6 text-end px-4">
-                <button value="101" class="btn btn-group-lg btn-primary">Play</button>
+                <button class="btn btn-group-lg btn-primary">Play</button>
                 <select name="grid" id="grid-value">
                     <option value="101">10 x 10</option>
                     <option value="65">8 x 8</option>
