--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <main class="d-flex">
         <div class="big-square m-auto d-flex flex-wrap">
         </div>
+        <div id="point"></div>
     </main>
     <footer></footer>
 </body>
