add points counter

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </div>
         </div>
     </header>
-    <main class="d-flex">
+    <main class="d-flex flex-column">
         <div class="big-square m-auto d-flex flex-wrap">
         </div>
-        <div id="point"></div>
+        <div id="point" class="text-center"></div>
     </main>
     <footer></footer>
 </body>
