Add style and a surprise

--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
             </div>
         </div>
     </header>
-    <main class="d-flex flex-column">
-        <div class="big-square m-auto d-flex flex-wrap">
-        </div>
-        <div id="point" class="text-center">
-            <h1 class="text-white">Il tuo punteggio è: <span></span> </h1>
+    <main>
+        <div class="container">
+            <div class="row d-flex">
+                <div id="point" class="text-center col-12">
+                    <h1 class="text-white">Il tuo punteggio è: <span></span> </h1>
+                </div>
+                <div class="col-10 big-square m-auto d-flex flex-wrap">
+                </div>
+            </div>
         </div>
     </main>
     <footer></footer>
